# combined_lights

./: .pre-commit-config.yaml  README.md  STAGE_4_CHANGES.md  config_flow.py  const.py  hacs.json  light.py  manifest.json  pyproject.toml  strings.json
.agent/workflows/: test.md
.github/: copilot-instructions.md
.github/workflows/: deploy-infographic.yml
custom_components/combined-lights/: light.py  strings.json
custom_components/combined_lights/: __init__.py  config_flow.py  const.py  helpers.py  light.py  manifest.json  strings.json
custom_components/combined_lights/helpers/: __init__.py  base_coordinator.py  brightness_calculator.py  config_validator.py  ha_coordinator.py  light_controller.py  manual_change_detector.py  zone_manager.py
infographic/: App.tsx  README.md  calculations.ts  index.html  metadata.json  package.json  types.ts
infographic/components/: CurveSelector.tsx  HouseVisual.tsx  StageChart.tsx
infographic/src/: app.js  calculations.js  curve-selector.js  house-visual.js  lib.js  stage-chart.js
simulation/: __init__.py  ha_simulation.py  run_server.py  server.py  sim_coordinator.py
simulation/static/: index.html
simulation/static/css/: style.css
simulation/static/js/: lib.js  main.js  state.js  websocket.js
tests/: conftest.py
tests/combined_lights/: __init__.py  conftest.py  test_backprop_validation.py  test_bidirectional_sync.py  test_concurrency.py  test_config_flow.py  test_error_handling.py  test_feedback_loops.py  test_init.py  test_initialization.py  test_light.py  test_load_fixture_example.py  test_pipeline.py  test_race_conditions.py  test_stage_4.py  test_watchdog.py  test_watchdog_integration.py
tests/combined_lights/fixtures/: brightness_test_cases.json  config_advanced.json  config_basic.json
tests/combined_lights/helpers/: __init__.py  conftest.py  logs.md  test_base_coordinator.py  test_brightness_calculator.py  test_config_validator.py  test_coordinator.py  test_light_controller.py  test_manual_change_detector.py  test_zone_manager.py  (+1 more)
(+2 files in other folders)
