[project]
name = "combined_lights"
version = "0.0.0"
description = "Combine and control multiple Home Assistant light entities as a single adaptive lighting group, with zone-based brightness and advanced configuration."
requires-python = ">=3.12"
dependencies = [
    "homeassistant==2024.12.5",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.45",
    "ruff>=0.8.0",
    "syrupy>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
ignore_errors = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
